2010-05-10	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* rtems/score/arm.h: Make it a warning not error that the FPU multilib
	is not supported yet.

2010-04-08	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* arm_exc_abort.S, arm_exc_handler_high.c, arm_exc_handler_low.S,
	arm_exc_interrupt.S, cpu.c, cpu_asm.S, rtems/asm.h, rtems/score/arm.h,
	rtems/score/cpu.h, rtems/score/cpu_asm.h, rtems/score/types.h:
	Documentation.

2010-04-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* arm_exc_abort.S: Fix warnings about TRUE/FALSE not defined.

2010-03-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	* arm_exc_abort.S, arm_exc_handler_high.c, arm_exc_handler_low.S,
	arm_exc_interrupt.S, cpu.c, cpu_asm.S: Add include of config.h

2010-01-12	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* arm_exc_abort.S: New file.
	* Makefile.am: Update for new file.
	* arm_exc_interrupt.S, cpu.c, rtems/asm.h, rtems/score/cpu.h: Changed
	macros which switch from and to THUMB mode.  Added a default prefetch
	and data abort handler which reports the complete processor context.
	Added PSR defines.

2009-12-15	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/score/arm.h: Recognize ARMv5TEJ.
	* arm_exc_interrupt.S: The previous implementation was broken.  In
	case of a nested interrupt the link register of the INT mode was not
	properly restored.  This lead to a major rewrite.  Interrupt
	processing is now done in SVC mode.

2009-10-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/score/arm.h: Recognize ARMv7A.

2009-10-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/score/arm.h: Recognize ARMv6J as needed by arm1136 variants.

2009-09-15	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/score/cpu.h: Fix for inline asm in _CPU_Fatal_halt().
	* rtems/asm.h: Added macro to define ARM functions.
	* cpu_asm.S, arm_exc_handler_low.S: Use macro from above.

2009-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>
